[package]
name = "oxipod"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
md5 = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"
clap = "^3.0.0-beta.2"
dialoguer = "*"
confy = "*"
comfy-table = "*"
thiserror = "1.0.30"
