[package]
name = "oxipod"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "^3.0.0-beta.2"
comfy-table = "5.0.0"
confy = "0.4.0"
csv = { version = "1.1.6" }
dialoguer = "0.9.0"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
serde_with = "1.12.0"
thiserror = "1.0.30"
